# stroids

./: Cargo.toml
.cargo/: config.toml
src/: log.rs  main.rs  tui.rs
