[package]
name = "stroids"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_info",
] }
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_state",
    "multi_threaded",
    "async-io",
] }
bevy_prng = { version = "0.9.0", features = ["wyrand"] }
bevy_rand = { version = "0.9.0", features = ["wyrand"] }
bevy_ratatui = "0.7.0"
ratatui = "0.29.0"
paste = "1.0.15"
rand_core = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[target.'cfg(windows)'.build-dependencies]
cross = "0.2.5"

[workspace.metadata.cross.target.x86_64-pc-windows-gnu]
pre-build = ["apt-get update && apt-get --assume-yes install clang"]
